spacing fixed tussen catalogus images, index pagina displayed nu werkelijk nieuwe jurken.

--- a/HoneymoonShop/src/HoneymoonShop/wwwroot/css/Style.css
+++ b/HoneymoonShop/src/HoneymoonShop/wwwroot/css/Style.css
@@ -185,8 +185,9 @@ row-suits {
 }
 
 .cat-textdescimage {
-    margin-top: 10px;
+    margin-top: 5px;
     margin-left: 10px;
+    margin-bottom: 15px;
 }
 
 .det-sideimg {
